// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/admin_console/group_settings/GroupRow > should match snapshot, on checked row 1`] = `
<div>
  <div
    class="group checked"
    id="name_group"
  >
    <div
      class="group-row"
    >
      <div
        class="group-name"
      >
        <div
          class="group-check checked"
        >
          <svg
            height="18px"
            viewBox="0 0 18 18"
            width="18px"
          >
            <g
              fill-rule="evenodd"
              id="Developer-Export"
              stroke="none"
              stroke-width="1"
            >
              <g
                id="All-Team-Members"
                transform="translate(-285.000000, -933.000000)"
              >
                <g
                  transform="translate(245.000000, 698.000000)"
                >
                  <g
                    id="Channel-Administrators"
                    transform="translate(0.000000, 106.000000)"
                  >
                    <g
                      id="data-table/column-1"
                      transform="translate(11.000000, 86.000000)"
                    >
                      <g
                        id="row-checkbox---Public-Channels"
                        transform="translate(12.000000, 35.000000)"
                      >
                        <g
                          id="Stacked-Group"
                          transform="translate(0.000000, 5.000000)"
                        >
                          <g
                            id="data-table/1st/row-checkbox-label-base"
                          >
                            <g
                              id="check-on-copy-11"
                              transform="translate(14.000000, 0.000000)"
                            >
                              <path
                                d="M19,3 L5,3 C3.9,3 3,3.9 3,5 L3,19 C3,20.1 3.9,21 5,21 L19,21 C20.1,21 21,20.1 21,19 L21,5 C21,3.9 20.1,3 19,3 L19,3 Z M10,17 L5,12.1923077 L6.4,10.8461538 L10,14.3076923 L17.6,7 L19,8.34615385 L10,17 L10,17 Z"
                                id="checkbox---checked"
                              />
                            </g>
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </g>
          </svg>
        </div>
        <span>
          name
        </span>
      </div>
      <div
        class="group-content"
      >
        <span
          class="group-description"
        >
          <a
            class=""
            href="#"
          >
            <i
              class="icon fa fa-unlink"
            />
            Not Linked
          </a>
        </span>
        <span
          class="group-actions"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupRow > should match snapshot, on failed linked row 1`] = `
<div>
  <div
    class="group "
    id="name_group"
  >
    <div
      class="group-row"
    >
      <div
        class="group-name"
      >
        <div
          class="group-check "
        />
        <span>
          name
        </span>
      </div>
      <div
        class="group-content"
      >
        <span
          class="group-description"
        >
          <a
            class="warning"
            href="#"
          >
            <i
              class="icon fa fa-exclamation-triangle"
            />
            Unlink failed
          </a>
        </span>
        <span
          class="group-actions"
        >
          <a
            href="/admin_console/user_management/groups/group-id"
            id="name_configure"
          >
            Configure
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupRow > should match snapshot, on failed not linked row 1`] = `
<div>
  <div
    class="group "
    id="name_group"
  >
    <div
      class="group-row"
    >
      <div
        class="group-name"
      >
        <div
          class="group-check "
        />
        <span>
          name
        </span>
      </div>
      <div
        class="group-content"
      >
        <span
          class="group-description"
        >
          <a
            class="warning"
            href="#"
          >
            <i
              class="icon fa fa-exclamation-triangle"
            />
            Link failed
          </a>
        </span>
        <span
          class="group-actions"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupRow > should match snapshot, on linked and configured row 1`] = `
<div>
  <div
    class="group "
    id="name_group"
  >
    <div
      class="group-row"
    >
      <div
        class="group-name"
      >
        <div
          class="group-check "
        />
        <span>
          name
        </span>
      </div>
      <div
        class="group-content"
      >
        <span
          class="group-description"
        >
          <a
            class=""
            href="#"
          >
            <i
              class="icon fa fa-link"
            />
            Linked
          </a>
        </span>
        <span
          class="group-actions"
        >
          <a
            href="/admin_console/user_management/groups/group-id"
            id="name_edit"
          >
            Edit
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupRow > should match snapshot, on linked but not configured row 1`] = `
<div>
  <div
    class="group "
    id="name_group"
  >
    <div
      class="group-row"
    >
      <div
        class="group-name"
      >
        <div
          class="group-check "
        />
        <span>
          name
        </span>
      </div>
      <div
        class="group-content"
      >
        <span
          class="group-description"
        >
          <a
            class=""
            href="#"
          >
            <i
              class="icon fa fa-link"
            />
            Linked
          </a>
        </span>
        <span
          class="group-actions"
        >
          <a
            href="/admin_console/user_management/groups/group-id"
            id="name_configure"
          >
            Configure
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/group_settings/GroupRow > should match snapshot, on not linked row 1`] = `
<div>
  <div
    class="group "
    id="name_group"
  >
    <div
      class="group-row"
    >
      <div
        class="group-name"
      >
        <div
          class="group-check "
        />
        <span>
          name
        </span>
      </div>
      <div
        class="group-content"
      >
        <span
          class="group-description"
        >
          <a
            class=""
            href="#"
          >
            <i
              class="icon fa fa-unlink"
            />
            Not Linked
          </a>
        </span>
        <span
          class="group-actions"
        />
      </div>
    </div>
  </div>
</div>
`;
